--- a/index.html
+++ b/index.html
@@ -1,44 +1,165 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Snake Game</title>
-	<link rel="stylesheet" href="style.css">
-</head>
-<body>
-	<div id="game-container">
-		<canvas id="gc" class="game-canvas" width="400" height="400"></canvas>
-	</div>
-	<div class="keys">
-	  <a class="up arr" onclick="Snake.action('up')">
-	    <i class="chevron up"></i></a>
-	  <br />
-	  <a class="left arr" onclick="Snake.action('left')">
-	    <i class="chevron left"></i></a>
-	  <a class="down arr" onclick="Snake.action('down')">
-	    <i class="chevron down"></i></a>
-	  <a class="right arr" onclick="Snake.action('right')">
-	    <i class="chevron right"></i></a>
-	</div>
-	<script type="text/javascript" src="game.js"></script>
-</body>
-</html>
-
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body {
-                margin: 10;
-                 height: 100vh;
-            background-image: url('https://media-hosting.imagekit.io/7c526713ae974cc8/VideoCapture_%D9%A2%D9%A0%D9%A2%D9%A4%D9%A0%D9%A8%D9%A1%D9%A7-%D9%A1%D9%A6%D9%A2%D9%A1%D9%A1%D9%A7.jpg?Expires=1839076275&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=uuupxrqNt0zQHyI0KcQcq21Bb7YfE0TQQZkuQqIMcmAn79xoQqLf098PYVZIqYcrNiVp-c5fsdIn7kptK8zIpZa2ugbUy5WTTFgKqCAuUDUb3Mc2V21W8tF4Q-C5SkeRZSy6THyKxgABe1rsO-Qtl4Z4cjyxk6Ywlaq8hQY6yQHXojujtrVhisHXX3KocZRgCzjo-OQubdN4H2ld~fxY1BEo5OVQ0PI4fDIt95fkaKOBMeQoAim4gGICVdsuwDjb7P3siZCQAUK2fR-aQp44VT8J73E6KfmSnge~hyNR5XKtVf~lB6pGz7UTqd2r5g~8XpT~X8TdhE7yg8pmH2Hs4g__'); 
-		background-size: cover;
-              background-position: center;
-            background-repeat: no-repeat;
-           margin: 7;
-               height: 100vh;
-               width: 100vw;
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Snake Game</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    html, body {
+      height: 100%;
+      width: 100%;
+      background: url('https://i.supaimg.com/c12ddb8c-2fa5-493f-954f-b9484021b166.webp') no-repeat center center fixed;
+      background-size: cover;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      font-family: sans-serif;
+      overflow: hidden;
+    }
+
+     canvas {
+      background-color:url('https://i.supaimg.com/c12ddb8c-2fa5-493f-954f-b9484021b166.webp');
+      border: none;
+      display: block;
+    }
+
+    #game-container {
+      /* مفيش خلفية ولا ظل ولا حواف */
+      background: transparent;
+      padding: 0;
+      border-radius: 0;
+      box-shadow: none;
+    }
+
+    .keys {
+      margin-top: 20px;
+      display: grid;
+      grid-template-columns: 60px 60px 60px;
+      grid-template-rows: 60px 60px;
+      gap: 10px;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .arr {
+      background: url('https://i.supaimg.com/c12ddb8c-2fa5-493f-954f-b9484021b166.webp');
+      text-align: center;
+      line-height: 60px;
+      font-size: 24px;
+      border-radius: 12px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+      user-select: none;
+      cursor: pointer;
+    }
+
+    .up { grid-column: 2 / 3; grid-row: 1 / 2; }
+    .left { grid-column: 1 / 2; grid-row: 2 / 3; }
+    .down { grid-column: 2 / 3; grid-row: 2 / 3; }
+    .right { grid-column: 3 / 4; grid-row: 2 / 3; }
+  </style>
+</head>
+<body>
+
+  <div id="game-container">
+    <canvas id="gc" class="game-canvas" width="400" height="400"></canvas>
+  </div>
+
+  <div class="keys">
+    <a class="up arr" onclick="Snake.action('up')">↑</a>
+    <a class="left arr" onclick="Snake.action('left')">←</a>
+    <a class="down arr" onclick="Snake.action('down')">↓</a>
+    <a class="right arr" onclick="Snake.action('right')">→</a>
+  </div>
+
+  <script src="game.js"></script>
+</body>
+</html><!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Snake Game</title>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    html, body {
+      height: 100%;
+      width: 100%;
+      background: url('https://i.supaimg.com/c12ddb8c-2fa5-493f-954f-b9484021b166.webp') no-repeat center center fixed;
+      background-size: cover;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      font-family: sans-serif;
+      overflow: hidden;
+    }
+
+     canvas {
+      background-color:url('https://i.supaimg.com/c12ddb8c-2fa5-493f-954f-b9484021b166.webp');
+      border: none;
+      display: block;
+    }
+
+    #game-container {
+      /* مفيش خلفية ولا ظل ولا حواف */
+      background: transparent;
+      padding: 0;
+      border-radius: 0;
+      box-shadow: none;
+    }
+
+    .keys {
+      margin-top: 20px;
+      display: grid;
+      grid-template-columns: 60px 60px 60px;
+      grid-template-rows: 60px 60px;
+      gap: 10px;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .arr {
+      background: url('https://i.supaimg.com/c12ddb8c-2fa5-493f-954f-b9484021b166.webp');
+      text-align: center;
+      line-height: 60px;
+      font-size: 24px;
+      border-radius: 12px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.3);
+      user-select: none;
+      cursor: pointer;
+    }
+
+    .up { grid-column: 2 / 3; grid-row: 1 / 2; }
+    .left { grid-column: 1 / 2; grid-row: 2 / 3; }
+    .down { grid-column: 2 / 3; grid-row: 2 / 3; }
+    .right { grid-column: 3 / 4; grid-row: 2 / 3; }
+  </style>
+</head>
+<body>
+
+  <div id="game-container">
+    <canvas id="gc" class="game-canvas" width="400" height="400"></canvas>
+  </div>
+
+  <div class="keys">
+    <a class="up arr" onclick="Snake.action('up')">↑</a>
+    <a class="left arr" onclick="Snake.action('left')">←</a>
+    <a class="down arr" onclick="Snake.action('down')">↓</a>
+    <a class="right arr" onclick="Snake.action('right')">→</a>
+  </div>
+
+  <script src="game.js"></script>
+</body>
+</html>
